--- a/packages/extra/gtk2/Makefile.fpc
+++ b/packages/extra/gtk2/Makefile.fpc
@@ -11,6 +11,7 @@ libc=y
 
 [target]
 units=buildgtk2
+exampledirs=examples
 implicitunits=glib2 atk pango gdk2pixbuf gdk2 gtk2 libglade2
 
 [compiler]
