--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -686,6 +686,11 @@ ifeq ($(wildcard docs-pdf.zip),)
 	@exit 1
 endif
 endif
+# Check for libgdb
+ifeq ($(wildcard libgdb/win32/libgdb.a),)
+	@$(ECHO) "Libgdb not available. Please get and unzip libgdb-<version>.i386-win32.zip in this directory."
+	@exit 1
+endif
         $(DELTREE) $(INNODIR)
         $(MKDIR) $(INNODIR)
 ifndef NODOCS
