--- a/rtl/macos/Makefile.fpc
+++ b/rtl/macos/Makefile.fpc
@@ -151,5 +151,5 @@ unixutil$(PPUEXT) : ../unix/unixutil.pp
 charset$(PPUEXT) : $(INC)/charset.pp system$(PPUEXT)
 
 cmem$(PPUEXT) : $(INC)/cmem.pp system$(PPUEXT)
-				
-ctypes$(PPUEXT) :  $(INC)/ctypes.pp $(SYSTEMUNIT)$(PPUEXT)
+
+ctypes$(PPUEXT) :  $(INC)/ctypes.pp system$(PPUEXT)
