first check for libgdb before building

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -678,7 +678,7 @@ ifdef NODOCS
 FPCISSSUBST+=-d DisableDocs=;
 endif
 
-innobuild: build
+innocheck:
 ifndef NODOCS
 # Check for docs-pdf.zip
 ifeq ($(wildcard docs-pdf.zip),)
@@ -691,6 +691,8 @@ ifeq ($(wildcard libgdb/win32/libgdb.a),)
 	@$(ECHO) "Libgdb not available. Please get and unzip libgdb-<version>.i386-win32.zip in this directory."
 	@exit 1
 endif
+
+innobuild: innocheck build
         $(DELTREE) $(INNODIR)
         $(MKDIR) $(INNODIR)
 ifndef NODOCS
