* sunos to solaris

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -9,7 +9,7 @@
 
 # OS categories
 BSDs = freebsd netbsd openbsd darwin
-UNIXs = linux $(BSDs) sunos qnx
+UNIXs = linux $(BSDs) solaris qnx
 LIMIT83fs = go32v2 os2 emx watcom
 
 #Empty target for rules that always should run. Needed if
@@ -847,7 +847,7 @@ SHORTSUFFIX=be
 endif
 
 # Solaris
-ifeq ($(OS_TARGET),sunos)
+ifeq ($(OS_TARGET),solaris)
 BATCHEXT=.sh
 EXEEXT=
 SHORTSUFFIX=sun
@@ -1011,7 +1011,7 @@ SHORTSUFFIX=be
 endif
 
 # Solaris
-ifeq ($(OS_TARGET),sunos)
+ifeq ($(OS_TARGET),solaris)
 BATCHEXT=.sh
 PPUEXT=.ppu
 ASMEXT=.s
